feat: encode args using types for known events
